--- a/main.css
+++ b/main.css
@@ -43,5 +43,75 @@ table {
 }
 
 body {
-    background-color: red;
+    width: 1100px;
+    margin: 0 auto;
+    font-family: 'Courgette', sans-serif;
+}
+
+header {
+    text-align: center;
+    margin: 90px auto 70px;
+}
+
+header h1 {
+    font-size: 100px;
+    font-weight: bold;    
+}
+
+p {
+    margin-top: 50px;
+    font-size: 40px;
+}
+
+main {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+main div {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+div#rock div {
+    width: 180px;
+    height: 153px;
+    /*border: 1px black solid;*/
+    background: url('./selections1.png') 206px -96px;
+}
+
+div#paper div {
+    width: 245px;
+    height: 210px;
+    /*border: 1px black solid;*/
+    background: url('./selections1.png') 495px 253px;
+}
+
+div#scissors div {
+    width: 240px;
+    height: 170px;
+    /*border: 1px black solid;*/
+    background: url('./selections1.png') -27px -27px;
+}
+
+footer p {
+    text-align: center;
+}
+
+.game-choice {
+    background-color: green;
+    border: none;
+    border-radius: 300px;
+    margin: 20px;
+    height: 300px;
+    width: 300px;
+    box-shadow: 0 3px 7px 5px;
+    cursor: pointer;
+}
+
+#results {
+    display: flex;
+    justify-content: space-between;
 }
